Upgrade to Java 17 with multi-version testing (17-23)